--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,8 +1,7 @@
 $text-primary-color: #475569;
-$text-secondary-color: #64748B;
+$text-secondary-color: #64748b;
 $text-chip-color: #334155;
 
-$background-primary: #94A3B8;
-$background-secondary: #E2E8F0;
-$background-hover: #D3DCE6;
-
+$background-primary: #94a3b8;
+$background-secondary: #e2e8f0;
+$background-hover: #d3dce6;
