--- a/src/components/Chip/Chip.module.scss
+++ b/src/components/Chip/Chip.module.scss
@@ -8,7 +8,7 @@
   justify-content: space-between;
   width: fit-content;
   height: 100%;
-  background: #E2E8F0;
+  background: #e2e8f0;
   border-radius: 0.75em;
   padding: 0.5em 1em;
   color: $text-chip-color;
@@ -19,7 +19,7 @@
     justify-content: center;
     width: 1.5em;
     height: 1.5em;
-    background: #94A3B8;
+    background: #94a3b8;
     border-radius: 4px;
     cursor: pointer;
     border: none;
